# adae-node

./: .gitignore  .npmignore  .prettierignore  .prettierrc  Cargo.toml  README.md  bun.lockb  index.d.ts  jest.config.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: Docker.yml  Tests.yml
docker/: Dockerfile
src/: clip.rs  config.rs  custom_output.rs  encapsulator.rs  lib.rs  mixer_track.rs  panic_handling.rs  shared_engine.rs  stored_clip.rs  timeline.rs  timeline_track.rs  timestamp.rs  track.rs  utils.rs
tests/: index.test.ts  timestamp.test.ts  tsconfig.json
