[package]
name = "adae-js"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
adae = { path = "../adae" }
lazy_static = "1.4"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-latest", "promise-api", "channel-api"]

[features]
record_output = ["adae/record_output"]
custom_debug_output = ["adae/custom_debug_output"]
