[package]
name = "adae-node"
version = "0.1.0"
license = "MIT"
authors = ["Holger Dal Mogensen"]
edition = "2021"
exclude = ["index.node"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
adae = { git = "https://github.com/sockmaster27/adae.git" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-latest", "promise-api", "channel-api"]

[features]
record_output = ["adae/record_output"]
custom_debug_output = ["adae/custom_debug_output"]
